Fix: https://github.com/Snownee/Jade/issues/359